# vdm_net

./: .buildinfo  .bumpversion.cfg  .pre-commit-config.yaml  README.md  code_documentation.html  genindex.html  howtos.html  index.html  licenses.html  licenses_table.html  objects.inv  project_overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
_sources/: index.rst.txt  licenses_table.rst.txt  project_overview.md.txt
api/: modules.html  vdm_net.html
data/main/: coverage.xml
docs/: code_documentation.md  conf.py
docs/api/: modules.rst  vdm_net.rst
howtos/: setup_dev_env.html
notebooks/: example.ipynb  example.py
src/vdm_net/: __init__.py
tests/: test_vdm_net.py
