[metadata]
name = vdm_net
# do not change version by hand: use bump_version.sh
version = file: src/vdm_net/VERSION
description = "VDM-Net: Vertex Displacement Maps  Network"
author = Piotr Gródek
author_email = grodekpiotr+gh@gmail.com
license = Other/Proprietary License
license_files = LICENSE.md
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: Independent
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: AI
    Private :: Do Not Upload

[options]
package_dir=
    =src
packages=find:
zip_safe = True
platforms = any
include_package_data = True
python_requires = >=3.11
install_requires =
    loguru

[options.extras_require]
train =
    hydra-core==1.3.2
    hydra-zen==0.11.0
    pytorch-lightning==2.1.2
    torch==2.1.1

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
